--- a/donate.html
+++ b/donate.html
@@ -10,7 +10,21 @@
 text-color:black;
 }
   </style>
-</head>
+<header>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+            <ul>
+                <li class="nav-link">
+                <a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-link">
+                <a class="nav-link" href="Issues.html">Issues</a></li>
+                <li class="nav-link">
+                <a class="nav-link" href="Organizations.html">Organizations</a></li>
+                <li class="nav-link active">
+                <a class="nav-link" href="donate.html">How To Help/ Donate <span class="sr-only">(current)</span></a></li></a></li></a></li>
+            </ul>
+        </nav>
+    </header>
 <body>
 <main>
   <h1><b>How To Help/Donate</b></h1>
