--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
 <head>
   <meta charset="utf-8">
   <title>Equality Around the Globe</title>
-</head>
-​<div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#issues">Issues</a>
-  <a href="#organizations">Organizations</a>
-  <a href="#donate">Donate</a>
-</div>
+<header>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+            <ul>
+                <li class="nav-link active">
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a></li></a></li>
+                <li class="nav-link">
+                <a class="nav-link" href="Issues.html">Issues</a></li>
+                <li class="nav-link">
+                <a class="nav-link" href="Organizations.html">Organizations</a></li>
+                <li class="nav-link">
+                <a class="nav-link" href="donate.html">How To Help/ Donate</a></li>
+            </ul>
+        </nav>
+    </header>
 <body>
 <main>
   <h1>Equality Around the Globe</h1>
