--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Equality Around the Globe</title>
+  <link rel="stylesheet" href="style.css">
+  </head>
 <header>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-info">
@@ -28,3 +30,6 @@
   <p>Inequality is massive problem that has been going on for thousands of years. Although many inprovements have been made throughout the past century, it is not enough!
   People all over the world are treated differently for their race, religion, and gender. This website was created to educate people about how inequlaity still exists today
   and the different actions people are taking to help end this issue.</p>
+  </main>
+  </body>
+</html>
