--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Equality Around the Globe</title>
+  @import url(style.css)
   <link rel="stylesheet" href="style.css">
   </head>
 <header>
