--- a/index.html
+++ b/index.html
@@ -1,6 +1,46 @@
 <!DOCTYPE html>
 <html>
+<style>
+    ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #2ed1c9;
+}
 
+li {
+  float: left;
+  border-right: 1px solid #31DCE7;
+}
+
+li a {
+  display: block;
+  color: rgb(2, 2, 2);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color:rgb(77, 166, 218)158, 149, 149);
+}
+h1 {backgound-image:url ("Globe.jpg");
+text-color:black;
+font-family:"Lucida Console", Arial, Cursive;
+font-weight:bold;
+font-size: 3 em
+text-align: center;
+}
+h2 {font-family:Georgia, Verdana;
+text-color:black;
+}
+p {font-family: Arial, sans-serif
+text-color: black}
+img { float: left;
+margin: 0 12px;
+        }    
+</style>
 <head>
   <meta charset="utf-8">
   <title>Equality Around the Globe</title>
