--- a/Issues.html
+++ b/Issues.html
@@ -4,6 +4,30 @@
   <meta charset="utf-8">
   <title><b>Equality Issues Around the Globe<b></title>
   <style>
+      ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #2ed1c9;
+}
+
+li {
+  float: left;
+  border-right: 1px solid #31DCE7;
+}
+
+li a {
+  display: block;
+  color: rgb(2, 2, 2);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color:rgb(77, 166, 218)158, 149, 149);
+}
   h1 {text-align: center;}
   
   h2 {font-family:Arial, Verdana;
