--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #2ed1c9;
+  background-color: #48F0F5;
 }
 
 li {
@@ -25,12 +25,22 @@ li a {
 li a:hover {
   background-color:rgb(77, 166, 218)158, 149, 149);
 }
+body {background-color: #FFF6FA;}
+blockquote {
+  display: block;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+}
 h1 {backgound-image:url ("Globe.jpg");
 text-color:black;
 font-family:"Lucida Console", Arial, Cursive;
 font-weight:bold;
+text-align:center;
 font-size: 3 em;
-text-align: center;
+
 }
 h2 {font-family:Georgia, Verdana;
 text-color:black;
@@ -66,7 +76,7 @@ margin: 0 12px;
   <h1>Equality Around the Globe</h1>
   <h2>About the Cause</h2>
   <blockquote><p>"We may have different religions, different languages, different colored skin, but we all belong to one human race."</p></blockquote>
-  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.vectorstock.com%2Froyalty-free-vector%2Fhuman-hands-together-over-earth-vector-10529424&psig=AOvVaw0GohNskLWBjuUxCPfnB4sY&ust=1596821123618000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCLDjtLiMh-sCFQAAAAAdAAAAABAD" alt= "HandsTogether">
+  <img src="HandsTogether.jpg"/>
   <p>Inequality is massive problem that has been going on for thousands of years. Although many inprovements have been made throughout the past century, it is not enough!
   People all over the world are treated differently for their race, religion, and gender. This website was created to educate people about how inequlaity still exists today
   and the different actions people are taking to help end this issue.</p>
