--- a/Issues.html
+++ b/Issues.html
@@ -52,14 +52,20 @@ text-color:black;
 <main>
   <h1>Equality Issues Around the Globe</h1>
     <h3>Gender Pay Gap</h3>
-  <img src="PayGapChart.png" alt="Pay Gap Chart" style="float:left">
+  <img src="PayGapChart.png" alt="Pay Gap Chart" style="float:left" width="300" length="300">
   <p>In 2020, the average Amerian women makes 81 cents for every dollar made by a man. People should be payed fairly based on the amount and quality of work they do, not based on their gender or ethnicity.</p>
    <details>
 <summary>Read more</summary>
 <p>Although a law was passed in 1963 that made paying people differently based on their gender illegal, it is still quite common today. Many people still believe that women should only cook, clean, and take care of children.</p>
 </details>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
    <h3>Education</h3>
-  <img src="GirlEducation.png" alt="Girls in School" style="float:left">
+  <img src="GirlEducation.jpg" alt="Girls in School" style="float:left" width="300" length="300">
   <p>Less than 40% of countries provide education for girls. More than half the girls in several countries are illiterate.</p>
    <details>
 <summary>Read more</summary>
