--- a/index.html
+++ b/index.html
@@ -32,15 +32,19 @@ blockquote {
   margin-bottom: 1em;
   margin-left: 40px;
   margin-right: 40px;
+  max-width: 550px;
+  text-align:center;
+margin: 20px;
+padding: 20px;
+font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
+font-size: 20px;
+color: #428bca;
 }
 }
-h1 {backgound-image:url ("Globe.jpg");
-text-color:black;
+h1 {
 font-family:"Lucida Console", Arial, Cursive;
 font-weight:bold;
 text-align:center;
-font-size: 3 em;
-
 }
 h2 {font-family:Georgia, Verdana;
 text-color:black;
@@ -75,11 +79,13 @@ margin: 0 12px;
 <main>
   <h1>Equality Around the Globe</h1>
   <h2>About the Cause</h2>
-  <blockquote><p>"We may have different religions, different languages, different colored skin, but we all belong to one human race."</p></blockquote>
-  <img src="HandsTogether.jpg"/>
-  <p>Inequality is massive problem that has been going on for thousands of years. Although many inprovements have been made throughout the past century, it is not enough!
+  <blockquote><p><em>"We may have different religions, different languages, different colored skin, but we all belong to one human race."    
+    <P style="page-break-before: always">-Kofi Annan</em></p></blockquote>
+  <img src="HandsTogether.jpg" width="200" height="200"/>
+  <p style="font-size:17px">Inequality is massive problem that has been going on for thousands of years. Although many inprovements have been made throughout the past century, it is not enough!
   People all over the world are treated differently for their race, religion, and gender. This website was created to educate people about how inequlaity still exists today
   and the different actions people are taking to help end this issue.</p>
+
   </main>
   </body>
 </html>
